# ex-alerter

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: python-package.yml
app/: config.py  main.py
